--- a/src/app/Components/gastos-index/ingresar-gasto/ingresar-gasto.component.html
+++ b/src/app/Components/gastos-index/ingresar-gasto/ingresar-gasto.component.html
@@ -11,6 +11,6 @@
 </div>
 <div class="from-group mb-4">
     <label for="cantidad">Cantidad</label>
-    <input type="number" id="cantidad" [(ngModel)]="cantidad" class="form-control form-control-lg" placeholder="Cantidad">
+    <input type="number" id="cantidad" [(ngModel)]="cantidad" (keydown.enter)="agregarGasto()" class="form-control form-control-lg" placeholder="Cantidad">
 </div>
 <button class="btn btn-primary btn-lg btn-block" (click)="agregarGasto()">Aceptar</button>
